0026317: Visualization - AIS_LengthDimension::CheckPlane() is incorrect